--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -48,7 +48,7 @@
             minScrollbarLength: 20
         });
 
-        $(console.log( url_for('static', filename='js/jinja.countdown.js')))
+        // $(console.log( url_for('static', filename='js/jinja.countdown.js')))
     </script>
 </body>
 </html>
