--- a/MESAeveryday/templates/account.html
+++ b/MESAeveryday/templates/account.html
@@ -65,41 +65,51 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
-         <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Update Password</legend>
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
+          <form name="form_r" method="POST" action="{{ url_for('account') }}" class="text-center p-5">
+              {{ form_r.hidden_tag() }}
+              <fieldset class="form-group">
+                 <p class="h4 mb-4">Update Password</p>
+
+
+
+                <div class="form-row mb-0">
+                  <div class="col">
+                    <div class="form-group">
+                        {% if form_r.password.errors %}
+                            {{ form_r.password(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form_r.password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form_r.password(class="form-control", placeholder="Password") }}
+                        {% endif %}
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-group">
+                        {% if form_r.confirm_password.errors %}
+                            {{ form_r.confirm_password(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form_r.confirm_password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form_r.confirm_password(class="form-control", placeholder="Confirm Password") }}
+                        {% endif %}
+                    </div>
+                  </div>
                 </div>
-                <div class="form-group">
-                    {{ form.confirm_password.label(class="form-control-label") }}
-                    {% if form.confirm_password.errors %}
-                        {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.confirm_password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.confirm_password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-        </form>
+
+              </fieldset>
+              <div class="form-group">
+                  {{ form_r.submit(class="btn btn-outline-info") }}
+              </div>
+
+
+          </form>
     </div>
     
 <!-- Avater Popup Modal -->
