Fixed select box showing up in avatar selection

--- a/MESAeveryday/static/css/main.css
+++ b/MESAeveryday/static/css/main.css
@@ -34,6 +34,10 @@ select {
     display:block!important;
 }
 
+#avatarSelect {
+    display:none!important;
+}
+
 .p-5 {
     padding: 0rem!important;
 }
