forgot to add js script, changed calendar source

--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -36,6 +36,8 @@
     <!--Countdown Bridge for Div Data-->
     <script type="text/javascript" src="../static/js/jinja.countdown.js"></script>
     <!--<script type="text/javascript" href="{{ url_for('static', filename='js/jinja.countdown.js') }}"></script>-->
+    <!--Calendar Resize-->
+    <script type="text/javascript" src="../static/js/calendar.resize.js"></script>
     <!--Custom scripts-->
     <script>
         // SideNav Initialization
