--- a/MESAeveryday/templates/dashboard.html
+++ b/MESAeveryday/templates/dashboard.html
@@ -109,8 +109,7 @@
                             <div class="collapsible-body">
                                 <ul>
                                     {% for r in result %}
-                                    <li><a href="" class="waves-effect">{{ r }}</a>
-                                    </li>
+                                        <li><a href="" class="waves-effect">{{ r }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </div>
@@ -159,8 +158,10 @@
                             Users activity
                         </div>
                         <div class="card-body">
-                            Time Until First Event!!!
-                            <span id="clock" data-date-string={{ events[0]['date_string'] }}></span>
+                            <table>
+                                <tr><td>Time Until First Event!!!<td></tr>
+                                <tr><td><span id="clock" data-date-string={{events[0][ 'date_string' ]}}></span></td></tr>
+                            </table>
                         </div>
                     </div>
 
@@ -192,28 +193,28 @@
                         <div class="card-body">
                             <table>
                                 {% for event in events[:10] %}
-                                <tr>
-                                    <table>
-                                        {% if event['remain_days'] < 8 %} <tr>
-                                            <td>{{event['summary']}} in {{event['remain_days']}} days
-                                                ({{event['calColor']}} : {{event['mesaColor']}})</td>
-                                </tr>
-                                <tr>
-                                    <td>on {{event['start_string']}}</td>
-                                </tr>
-                                <tr>
-                                    <td>on {{event['date_string']}}</td>
-                                </tr>
-                                <tr>
-                                    <td>at {{event['location']}}</td>
-                                </tr>
-                                <tr>
-                                    <td>--</td>
-                                </tr>
-                                {% endif %}
-                            </table>
-                            </tr>
-                            {% endfor %}
+                                    <tr>
+                                        <table>
+                                            {% if event['remain_days'] < 8 %} 
+                                                <tr>
+                                                    <td>{{event['summary']}} in {{event['remain_days']}} days ({{event['calColor']}} : {{event['mesaColor']}})</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>on {{event['start_string']}}</td>
+                                               </tr>
+                                                <tr>
+                                                    <td>on {{event['date_string']}}</td>
+                                                </tr>
+                                               <tr>
+                                                    <td>at {{event['location']}}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>--</td>
+                                                </tr>
+                                            {% endif %}
+                                        </table>
+                                    </tr>
+                                {% endfor %}
                             </table>
 
                             <button class="btn btn btn-flat grey lighten-3 btn-rounded waves-effect font-weight-bold dark-grey-text float-right">View
