--- a/MESAeveryday/templates/layout.html
+++ b/MESAeveryday/templates/layout.html
@@ -38,20 +38,8 @@
     <!--<script type="text/javascript" href="{{ url_for('static', filename='js/jinja.countdown.js') }}"></script>-->
     <!--Calendar Resize-->
     <script type="text/javascript" src="../static/js/calendar.resize.js"></script>
+    <script type="text/javascript" src="../static/js/sideNavInit.js"></script>
     <!--Custom scripts-->
-    <script>
-        // SideNav Initialization
-        $(".button-collapse").sideNav();
-
-        var container = document.querySelector('.custom-scrollbar');
-        Ps.initialize(container, {
-            wheelSpeed: 2,
-            wheelPropagation: true,
-            minScrollbarLength: 20
-        });
-
-        // $(console.log( url_for('static', filename='js/jinja.countdown.js')))
-    </script>
-</body>
+    </body>
 </html>
 
