Added support for badge images

--- a/MESAeveryday/templates/badges.html
+++ b/MESAeveryday/templates/badges.html
@@ -162,7 +162,7 @@
                                 <div class="col-lg-4 mb-4">
                                     <!--Featured image-->
                                     <div class="view overlay z-depth-1">
-                                        <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
+                                        <img class="rounded-circle account-img" src="../static/badge_icons/{{ picture_file }}" class="img-fluid">
                                         <a>
                                             <div class="mask rgba-white-slight"></div>
                                         </a>
